# address-guard

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
crates/address-guard-core/: Cargo.toml
crates/address-guard-core/src/: compare.rs  evm.rs  lib.rs  scrub.rs  solana.rs  tron.rs  types.rs
crates/address-guard-napi/: Cargo.toml
crates/address-guard-napi/src/: lib.rs
crates/address-guard-wasm/: Cargo.toml
crates/address-guard-wasm/src/: lib.rs
examples/: node-transfer.mjs
examples/browser-wasm/: index.html
