[workspace]
resolver = "2"
members = [
    "crates/address-guard-core",
    "crates/address-guard-napi",
    "crates/address-guard-wasm",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
authors = ["carlosmontanor"]
repository = "https://github.com/cjmont/address-guard"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"     # optimize for size (WASM bundle)
panic = "abort"
strip = true
